Fixed issue with right column being cut off

--- a/standalone/styles/simple-sidebar.css
+++ b/standalone/styles/simple-sidebar.css
@@ -182,6 +182,8 @@
     #sidebar-wrapper-right {
         width: 250px;
         top: 10%;
+        height: 100%;
+        bottom: 5%;
     }
 
     #wrapper-right.toggled #sidebar-wrapper-right {
